[UTE_HUB - 141] feat: add document recommendations feature to homepage, fix layout
