# backend/UteLearningHub.Application/Common/Dtos/MessageFileDto.cs
@@ -3,6 +3,7 @@
 public record MessageFileDto
 {
     public Guid FileId { get; init; }
+    public string FileName { get; init; } = default!;
     public long FileSize { get; init; }
     public string MimeType { get; init; } = default!;
 }
