# backend/UteLearningHub.Infrastructure/Services/Message/MessageService.cs
@@ -422,6 +422,7 @@ public class MessageService(
             Files = message.MessageFiles.Select(mf => new MessageFileDto
             {
                 FileId = mf.File.Id,
+                FileName = mf.File.FileName,
                 FileSize = mf.File.FileSize,
                 MimeType = mf.File.MimeType
             }).ToList(),
